LARGE COMMIT - created interface for game, network not making moves correctly yet

--- a/package.json
+++ b/package.json
@@ -1,5 +1,35 @@
 {
+  "name": "NaughtsAndCrosses",
+  "version": "1.0.0",
+  "description": "coolest game eva",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest --watchAll",
+    "start": "node server & webpack --watch",
+    "postinstall": "yarn webpack",
+    "dev": "nodemon server & webpack --watch"
+  },
+  "babel": {
+    "presets": [
+      "env",
+      "react"
+    ]
+  },
+  "keywords": [],
+  "author": "Edi Rose",
+  "license": "ISC",
   "dependencies": {
-    "brain.js": "^1.1.2"
+    "brain.js": "^1.1.2",
+    "jest": "^22.4.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "express": "^4.16.2",
+    "heroku": "^0.2.0",
+    "nodemon": "^1.14.12",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "webpack": "^3.11.0"
   }
 }
