--- a/package.json
+++ b/package.json
@@ -19,17 +19,19 @@
   "author": "Edi Rose",
   "license": "ISC",
   "dependencies": {
-    "brain.js": "^1.1.2",
-    "jest": "^22.4.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "express": "^4.16.2",
+    "brain.js": "^1.1.2",
+    "express": "^4.14.0",
     "heroku": "^0.2.0",
+    "jest": "^22.4.2",
+    "knex": "^0.14.6",
     "nodemon": "^1.14.12",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "sqlite3": "^4.0.0",
     "webpack": "^3.11.0"
   }
 }
