--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "sqlite3": "^4.0.0",
+    "superagent": "^3.8.3",
     "webpack": "^3.11.0"
   }
 }
