--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Edi Rose",
   "license": "ISC",
   "dependencies": {
+    "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
@@ -30,6 +31,7 @@
     "jest": "^22.4.2",
     "knex": "^0.14.6",
     "nodemon": "^1.14.12",
+    "pg": "^7.4.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "sqlite3": "^4.0.0",
